@@ -11,4 +11,3 @@ import=Import quickbar template
 [qt-message]
 invalid-blueprint=Invalid quickbar template blueprint!
 invalid-default-blueprint=Invalid default quickbar template!
-old-or-placed-blueprint=Template is missing slot index data - cannot import. Templates created before v2.0.0 of the mod are no longer compatible. Templates that are created by selecting real combinators from the game world are also incompatible.
